--- a/package.json
+++ b/package.json
@@ -6,9 +6,21 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@types/jest": "^27.0.3",
+    "@types/node": "^16.11.12",
+    "@types/react": "^17.0.37",
+    "@types/react-dom": "^17.0.11",
+    "@types/styled-components": "^5.1.17",
+    "axios": "^0.24.0",
+    "polished": "^4.1.3",
+    "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-qr-code": "^2.0.3",
     "react-scripts": "4.0.3",
+    "sass": "^1.45.0",
+    "styled-components": "^5.3.3",
+    "typescript": "^4.5.3",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
@@ -21,7 +33,11 @@
     "extends": [
       "react-app",
       "react-app/jest"
-    ]
+    ],
+    "overrides": []
+  },
+  "resolutions": {
+    "styled-components": "^5"
   },
   "browserslist": {
     "production": [
