--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "strike-pay",
   "version": "0.1.0",
   "private": true,
+  "main": "main.js",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -12,20 +13,26 @@
     "@types/react-dom": "^17.0.11",
     "@types/styled-components": "^5.1.17",
     "axios": "^0.24.0",
-    "polished": "^4.1.3",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
     "react-qr-code": "^2.0.3",
-    "react-scripts": "4.0.3",
-    "styled-components": "^5.3.3",
     "typescript": "^4.5.3",
     "web-vitals": "^1.0.1"
+  },
+  "devDependencies": {
+    "polished": "^4.1.3",
+    "styled-components": "^5.3.3"
+  },
+  "peerDependencies": {
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-scripts": "4.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "clean": "rimraf dist",
+    "compile": "npm run clean && cross-env NODE_ENV=production babel main.tsx --out-dir dist --copy-files --ignore __tests__,spec.js,test.js,__snapshots__"
   },
   "eslintConfig": {
     "extends": [
