Get rid of bad scripts

--- a/package.json
+++ b/package.json
@@ -30,9 +30,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "clean": "rimraf dist",
-    "compile": "npm run clean && cross-env NODE_ENV=production babel main.tsx --out-dir dist --copy-files --ignore __tests__,spec.js,test.js,__snapshots__"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
