--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "strike-pay",
   "version": "0.1.0",
   "private": true,
-  "main": "main.js",
+  "main": "dist/main.bundle.js",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
